--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
+# Ignore virtual environments
+venv/
+env/
 
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+# Ignore compiled Python files
+__pycache__/
+*.py[cod]
+*.pyo
+
+# Ignore Docker and AWS-specific files
 Dockerfile
 .dockerignore
 .elasticbeanstalk/
 .ebextensions/
 AWSCLIV2.pkg
 Procfile
+
+# Ignore environment variables
+.env
+
+# Ignore uploads, static files, and temporary files
+uploads/
+static/
+*.log
+
+
